Fix plans visibility

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -386,7 +386,7 @@ section h3.section-subheading {
 }
 
 #plans {
-  display: block;
+  display: none;
 }
 
 #plans .row.content div.item img {
